# logutils

./: README.md  pyproject.toml
logutils/: __init__.py  main.py
logutils/filters/: OrFilter.py  __init__.py
tests/: test_logutils.py
